--- a/product.html
+++ b/product.html
@@ -46,19 +46,11 @@
     </nav>
 
     <div class="container">
-      <div id="slider" class="jumbotron">
-        <h1>Hello, world!</h1>
-        <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#subscribe">Learn more</a></p>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-4">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</div>
-        <div class="col-xs-12 col-md-4">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</div>
-        <div class="col-xs-12 col-md-4">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</div>
-      </div>
+      <h1 id="product-name"></h1>
+      <p id="product-desc"></p>
+      <img id="product-img"/>
+      <p id="product-price"></p>
+      <button class="btn btn-default">Add to cart</button>
     </div>
 
     <footer class="bs-docs-footer" role="contentinfo">
@@ -68,27 +60,6 @@
       </div>
     </footer>
 
-    <div class="modal fade" id="subscribe" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Subscription</h4>
-          </div>
-          <div class="modal-body">
-            <p>Please enter leave your email to subscribe:</p>
-            <form>
-              <input type="email" class="form-control" placeholder="email@domain.com" required />
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Subscribe</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="slider.js"></script>
-
+    <script src="product.js"></script>
   </body>
 </html>
