--- a/product-list.html
+++ b/product-list.html
@@ -46,19 +46,22 @@
     </nav>
 
     <div class="container">
-      <div id="slider" class="jumbotron">
-        <h1>Hello, world!</h1>
-        <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button" data-toggle="modal" data-target="#subscribe">Learn more</a></p>
+      <h1 class="title">Products</h1>
+      <div class="btn-group actions">
+        <button id="search" class="btn btn-default">
+          <span class="glyphicon glyphicon-search"></span>
+        </button>
+        <button id="display-list" class="btn btn-default">
+          <span class="glyphicon glyphicon-th-list"></span>
+        </button>
+        <button id="display-thumbnails" class="btn btn-default">
+          <span class="glyphicon glyphicon-th"></span>
+        </button>
       </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-4">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</div>
-        <div class="col-xs-12 col-md-4">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</div>
-        <div class="col-xs-12 col-md-4">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</div>
+      <div class="input-group actions search">
+        <input id="product-search" class="form-control" placeholder="Search products"/>
       </div>
+      <ul id="product-list"></ul>
     </div>
 
     <footer class="bs-docs-footer" role="contentinfo">
@@ -68,27 +71,6 @@
       </div>
     </footer>
 
-    <div class="modal fade" id="subscribe" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Subscription</h4>
-          </div>
-          <div class="modal-body">
-            <p>Please enter leave your email to subscribe:</p>
-            <form>
-              <input type="email" class="form-control" placeholder="email@domain.com" required />
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Subscribe</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="slider.js"></script>
-
+    <script src="product-list.js"></script>
   </body>
 </html>
